--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<ul>
 							<li><a href="#intro"><b>WELCOME</b></a></li>
 							<li><a href="#artist"><b>MEET THE ARTIST</b></a></li>
-							<li><a href="#one"><b>MY WORK</b></a></li>
+							<li><a href="#one"><b>STYLE</b></a></li>
 							<li><a href="#work"><b>GALLERY</b></a></li>
 							<li><a href="#contact"><b>CONTACT</b></a></li>
 							<li><a href="port/port.html"><img src="images/brazil.png"></a></li>
@@ -42,7 +42,7 @@
 					<header>
 						<h2></h2>
 					</header>
-					<p align="justify">My pleasure is to depict on canvas my way of seeing and feeling my surroundings.</p>
+					<p align="justify">My passion is to depict on canvas my way of seeing and expressing my surroundings.</p>
 					<p align="right"><img src="images/Signature.png"></p>
 				</div>
 				<a href="#artist" class="button style2 down anchored">More</a>
@@ -61,7 +61,7 @@
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-						<p align="justify">Angela Stelin was born and raised in Brazil, spending her childhood between the bustling São Paulo and the tranquil farmlands of the Centre-West region, Mato Grosso do Sul. She grew up in a family immersed in music, literature, journalism and visual arts, and naturally developed an interest in drawing at a very young age. Driven by her enthusiasm for mathematics and geometric drawings, Angela pursued studies in Industrial Design from Fundação Armando Álvares Penteado (FAAP) in São Paulo, graduating in 1982.<br>Angela left Brazil with her husband and kids in 1994, living in Morocco, Turkey and then Sweden along the way. In these challenging and adventurous years, she fulfilled her passion for the arts by appreciating other artists' manifestations and exhibitions wherever she set foot upon. In Istanbul, Angela explored other techniques, such as marbling (Ebru), miniaturing, gouache and watercolours. <br>Today, Angela spends her time between the upcoming creative hive of Gothenburg, Sweden, and the eternal vibrancy of London, England, developing her own artistic style- expressing life, colours and nature.</p>
+						<p align="justify">Angela Stelin was born and raised in Brazil, spending her childhood between the bustling São Paulo and the tranquil farmlands of the Centre-West region, Mato Grosso do Sul. She grew up in a family immersed in music, literature, journalism and visual arts, and thus naturally developed an interest in drawing at a very young age. Driven by her enthusiasm for mathematics and geometric drawings, Angela pursued studies in Industrial Design from Fundação Armando Álvares Penteado (FAAP) in São Paulo, graduating in 1982.<br>Angela left Brazil with her husband and kids in 1994, living in Morocco, Turkey and then Sweden along the way. In these challenging and adventurous years, she continued to explore her passion for the arts by appreciating other artists' works and exhibitions. In Istanbul, Angela experimented with other techniques, such as marbling (Ebru), miniaturing, gouache and watercolours.  <br>Today, Angela spends her time between the creative hive of Gothenburg (Sweden) and the eternal vibrancy of London (UK), developing her own artistic style - expressing life, colours and nature.</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
@@ -70,9 +70,9 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2><center>MY WORK</center></h2>
+						<h2><center>STYLE</center></h2>
 					</header>
-					<p align="justify"> Fascinated by geometric figures and nature, Angela's style mixes the abstract with figurative concepts. Everyday scenes inspire the creative process, put on canvas with pencils, acrylic paints, tapes and photographs. She enjoys the surprise effect once the tapes from the canvas are removed, showing a concoction of figures and empty spaces, transcending between opacity and transparency, luminosity and darkness. Angela is inspired by the contradicting beauty of nature - symmetry and chaos, strength and fragility, peace and violence, light and shadow - thus becoming key components of her work.</p>
+					<p align="justify"> Fascinated by geometric figures and nature, Angela's style mixes the abstract with figurative concepts. Everyday scenes inspire the creative process, expressed on canvas using acrylic paints, tape and photographs. She enjoys the surprise when the tape is removed from the canvas, showing a concoction of figures and empty spaces, transcending between opacity and transparency, luminosity and darkness. Angela is inspired by the contradicting beauty of nature - symmetry and chaos, strength and fragility, peace and violence, light and shadow - thus becoming key components of her work.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -88,16 +88,16 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 75% gallery">
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Agata" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrylic on canvas, 66 x 56 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Blue Lagoon" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Diving in a Virtual Night" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Blue Lagoon, acrylic on canvas, 100 x 70 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Diving in a Virtual Night, acrylic on canvas, 120 x 90 cm" alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="Caminhos" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Little Miracles" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="Caminhos, acrylic on canvas, 90 x 120 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Pequenos Milagres, acrylic on canvas, 100 x 130 cm" alt="" /></a></div>
 							</div>
 						</div>
 
