--- a/port/port.html
+++ b/port/port.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro"><b>BEM-VINDO</b></a></li>
-							<li><a href="#artist"><b>CONHEÇA A ARTISTA</b></a></li>
+							<li><a href="#artist"><b>CONHEÇA  A  ARTISTA</b></a></li>
 							<li><a href="#one"><b>TÉCNICA E ESTILO</b></a></li>
 							<li><a href="#work"><b>GALERIA</b></a></li>
 							<li><a href="#contact"><b>CONTATO</b></a></li>
@@ -42,7 +42,7 @@
 					<header>
 						<h2></h2>
 					</header>
-					<p align="justify">Meu prazer é colocar na tela meu jeito de ver e sentir o que me rodeia.</p>
+					<p align="justify">Minha alegria é colocar na tela meu jeito de ver e sentir o que me rodeia.</p>
 					<p align="right"><img src="images/Signature.png"></p>
 				</div>
 				<a href="#artist" class="button style2 down anchored">More</a>
@@ -59,9 +59,9 @@
 			<section id="artist2" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>CONHEÇA A ARTISTA</h2>
+						<h2>CONHEÇA  A  ARTISTA</h2>
 					</header>
-						<p align="justify">Angela Stelin nasceu e cresceu no Brasil, passando sua infância entre a agitada São Paulo e a região tranquila de Mato Grosso do Sul. Vivendo numa família envolvida com a musica, literatura, jornalismo e artes, muito cedo começou a desenhar. Entusiasmada com matemática e desenho geométrico, Angela decidiu cursar Desenho Industrial na Fundação Armando Álvares Penteado ( FAAP) em São Paulo, formando-se em 1982.<br>Angela, marido e filhos deixaram o Brasil em 1994, para morar em Marrocos, Turquia e depois Suécia. Nesses anos de aventura e desafios, manteve sua paixão pela arte apreciando exposições e manifestações de outros artistas por onde passava. Em Istambul, aprendeu novas técnicas como marmorização (Ebru), miniatura, guache e aquarela. <br>Hoje, Angela divide seu tempo entre  a criativa Gotemburgo, Suécia, e a vibrante e eterna Londres, Inglaterra, desenvolvendo seu próprio estilo artístico - expressando a natureza, cores e a vida.</p>
+						<p align="justify">Angela Stelin nasceu e cresceu no Brasil, passando sua infância entre a agitada São Paulo e a região tranquila de Mato Grosso do Sul. Vivendo numa família envolvida com a música, literatura, jornalismo e artes, muito cedo começou a desenhar. Entusiasmada com matemática e desenho geométrico, Angela decidiu cursar Desenho Industrial na Fundação Armando Álvares Penteado ( FAAP) em São Paulo, formando-se em 1982.<br>Angela, marido e filhos deixaram o Brasil em 1994, para morar em Marrocos, Turquia e depois Suécia. Nesses anos de aventura e desafios, manteve sua paixão pela arte apreciando exposições e manifestações de outros artistas por onde passava. Em Istambul, aprendeu novas técnicas como marmorização (Ebru), miniatura, guache e aquarela. <br>Hoje, Angela divide seu tempo entre  a criativa Gotemburgo, Suécia, e a eterna vibração de Londres, Inglaterra, desenvolvendo seu próprio estilo artístico e expressando a natureza, cores e a vida.</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
@@ -88,16 +88,16 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 75% gallery">
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Agata" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrílica s/ tela, 66 x 56 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrílica s/ tela, 100 x 80 cm" alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Blue Lagoon" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Diving in a Virtual Night" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Blue Lagoon, acrílica s/ tela, 100 x 70 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Diving in a Virtual Night, acrílica s/ tela, 120 x 90cm" alt="" /></a></div>
 							</div>
 							<div class="row 0% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="Caminhos" alt="" /></a></div>
-								<div class="6u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Little Miracles" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="Caminhos,acrílica s/ tela, 90 x 120 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Little Miracles,acrílica s/ tela, 100 x 130 cm" alt="" /></a></div>
 							</div>
 						</div>
 
