--- a/port/port.html
+++ b/port/port.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro"><b>BEM-VINDO</b></a></li>
-							<li><a href="#artist"><b>CONHEÇA  A  ARTISTA</b></a></li>
+							<li><a href="#artist"><b>CONHEÇA-A-ARTISTA</b></a></li>
 							<li><a href="#one"><b>TÉCNICA E ESTILO</b></a></li>
 							<li><a href="#work"><b>GALERIA</b></a></li>
 							<li><a href="#contact"><b>CONTATO</b></a></li>
@@ -59,7 +59,7 @@
 			<section id="artist2" class="main style3 primary">
 				<div class="content container">
 					<header>
-						<h2>CONHEÇA   A   ARTISTA</h2>
+						<h2>CONHEÇA-A-ARTISTA</h2>
 					</header>
 						<p align="justify">Angela Stelin nasceu e cresceu no Brasil, passando sua infância entre a agitada São Paulo e a região tranquila de Mato Grosso do Sul. Vivendo numa família envolvida com a música, literatura, jornalismo e artes, muito cedo começou a desenhar. Entusiasmada com matemática e desenho geométrico, Angela decidiu cursar Desenho Industrial na Fundação Armando Álvares Penteado ( FAAP) em São Paulo, formando-se em 1982.<br>Angela, marido e filhos deixaram o Brasil em 1994, para morar em Marrocos, Turquia e depois Suécia. Nesses anos de aventura e desafios, manteve sua paixão pela arte apreciando exposições e manifestações de outros artistas por onde passava. Em Istambul, aprendeu novas técnicas como marmorização (Ebru), miniatura, guache e aquarela. <br>Hoje, Angela divide seu tempo entre  a criativa Gotemburgo, Suécia, e a eterna vibração de Londres, Inglaterra, desenvolvendo seu próprio estilo artístico e expressando a natureza, cores e a vida.</p>
 				</div>
