--- a/port/port.html
+++ b/port/port.html
@@ -100,7 +100,7 @@
 							<div class="row 0% images">
 								<div class="6u 12u(mobile)"><a href="../../images/fulls/05.jpg" class="image fit from-left"><img src="../../images/thumbs/05.jpg" title="Caminhos,acrílica s/ tela, 90 x 120 cm" alt="" /></a></div>
 
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/06.jpg" class="image fit from-right"><img src="../../images/thumbs/06.jpg" title="Little Miracles,acrílica s/ tela, 100 x 130 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/06.jpg" class="image fit from-right"><img src="../../images/thumbs/06.jpg" title="Pequenos Milagres,acrílica s/ tela, 100 x 130 cm" alt="" /></a></div>
 							</div>
 						</div>
 
