--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
 					<div class="box container 75%">
 
 					<!-- Contact Form -->
-							<form method="post" action="#">
+					<?php
+					$action=$_REQUEST['action'];
+					if ($action=="")    /* display the contact form */
+    						{
+    						?>
+							<form method="POST" action="">
 								<div class="row 50%">
 									<div class="6u 12u(mobile)"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="6u 12u(mobile)"><input type="email" name="email" placeholder="Email" /></div>
@@ -136,6 +141,25 @@
 									</div>
 								</div>
 							</form>
+							<?php
+    						} 
+    						else                /* send the submitted data */
+    						{
+    						$name=$_REQUEST['name'];
+    						$email=$_REQUEST['email'];
+    						$message=$_REQUEST['message'];
+    						if (($name=="")||($email=="")||($message==""))
+        					{
+        					echo "All fields are required, please fill <a href=\"\">the form</a> again.";
+        					}
+    						else{        
+        					$from="From: $name<$email>\r\nReturn-path: $email";
+        					$subject="Message sent using your contact form";
+        					mail("aileengana@yahoo.com", $subject, $message, $from);
+        					echo "Email sent!";
+        }
+    }  
+?>
 
 					</div>
 				</div>
