--- a/index.html
+++ b/index.html
@@ -120,49 +120,7 @@
 					<div class="box container 75%">
 
 					<!-- Contact Form -->
-					<?php
-					$action=$_REQUEST['action'];
-					if ($action=="")    /* display the contact form */
-    						{
-    						?>
-							<form method="POST" action="">
-								<div class="row 50%">
-									<div class="6u 12u(mobile)"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="6u 12u(mobile)"><input type="email" name="email" placeholder="Email" /></div>
-								</div>
-								<div class="row 50%">
-									<div class="12u"><textarea name="message" placeholder="Message" rows="6"></textarea></div>
-								</div>
-								<div class="row">
-									<div class="12u">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-							<?php
-    						} 
-    						else                /* send the submitted data */
-    						{
-    						$name=$_REQUEST['name'];
-    						$email=$_REQUEST['email'];
-    						$message=$_REQUEST['message'];
-    						if (($name=="")||($email=="")||($message==""))
-        					{
-        					echo "All fields are required, please fill <a href=\"\">the form</a> again.";
-        					}
-    						else{        
-        					$from="From: $name<$email>\r\nReturn-path: $email";
-        					$subject="Message sent using your contact form";
-        					mail("aileengana@yahoo.com", $subject, $message, $from);
-        					echo "Email sent!";
-        }
-    }  
-?>
-
-					</div>
-				</div>
+					<div id="zbwid-5d5e4ed9"></div>
 			</section>
 
 		<!-- Footer -->
