--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrylic on canvas, 66 x 56 cm" alt="" /></a></div>
 								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
 							</div>
-							<div class="row 0% images">
+							<div class="row flush images">
 								<div class="6u -3u(mobile)"><a href="images/fulls/02.jpg" ><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
 							</div>	
 							<div class="row 0% images">
