--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<header>
 						<h2>KEEP IN TOUCH</h2>
 						<br>
-						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/facebook.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/instagram.png"></a></centre>
+						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/Facebook 25 icon.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/Instagram 25 icon.png"></a></centre>
 						<br>
 						<p align="center"><b>EMAIL</b> angelastelin@gmail.com<br>
 							<b>PHONE</b>  UK:  +44 7532 26 55 96 | PORTUGAL: +351 925 562 445 </p>
