Updating Braziliian menu Bem-Vindos

--- a/port/port.html
+++ b/port/port.html
@@ -25,7 +25,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro"><b>BEM-VINDO</b></a></li>
+							<li><a href="#intro"><b>BEM-VINDOS</b></a></li>
 							<li><a href="#artist"><b>A ARTISTA</b></a></li>
 							<li><a href="#one"><b>TÉCNICA E ESTILO</b></a></li>
 							<li><a href="#work"><b>GALERIA</b></a></li>
