Updating social media icons on PT site

--- a/port/port.html
+++ b/port/port.html
@@ -115,7 +115,7 @@
 					<header>
 						<h2>CONTATO</h2>
 						<br>
-						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/facebook.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/instagram.png"></a></centre>
+						<centre><a href="https://www.facebook.com/angela.stelin.artist/?fref=ts" target="_blank"><img src="images/Facebook 45x45.png"></a><a href="https://www.instagram.com/angela.stelin.artist/" target="_blank"><img src="images/Instagram 45x45.png"></a></centre>
 						<br>
 						<p align="center"><b>EMAIL</b> angelastelin@gmail.com<br>
 							<b>FONE</b>  UK:  +44 7532 26 55 96 | PORTUGAL: +351 925 562 445 </p>
