Replacing Brazil flag with "PT"

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<li><a href="#one"><b>STYLE</b></a></li>
 							<li><a href="#work"><b>GALLERY</b></a></li>
 							<li><a href="#contact"><b>CONTACT</b></a></li>
-							<li><a href="port/port.html"><img src="images/brazil.png"></a></li>
+							<li><a href="port/port.html"><b>PT</b></a></li>
 						</ul>
 					</nav>
 
