Updating "Meet the artist" text to have paragraphs

--- a/port/port.html
+++ b/port/port.html
@@ -61,15 +61,15 @@
 					<header>
 						<h2>A ARTISTA</h2>
 					</header>
-						<p align="justify">Angela Stelin nasceu e cresceu no Brasil, passando sua infância entre a agitada São Paulo e a região tranquila de Mato Grosso do Sul. Vivendo numa família envolvida com a música, literatura, jornalismo e artes, muito cedo começou a desenhar. Entusiasmada com matemática e desenho
-geométrico, decidiu cursar Desenho Industrial na Fundação Armando
-Álvares Penteado (FAAP) em São Paulo, formando-se em 1982.
+						<p align="justify">Angela Stelin nasceu e cresceu no Brasil, passando sua infância entre a agitada São Paulo e a região tranquila de Mato Grosso do Sul. Vivendo numa família envolvida com a música, literatura, jornalismo e artes, muito cedo começou a desenhar. Entusiasmada com matemática e desenho geométrico, decidiu cursar Desenho Industrial na Fundação Armando Álvares Penteado (FAAP) em São Paulo, formando-se em 1982.
+							<br>
 Angela, marido e filhos deixaram o Brasil em 1994 para morar em
 Marrocos, Turquia, Suécia, Inglaterra, Suíça e agora Portugal. Nesses
 anos de aventuras e desafios, manteve sua paixão pela arte apreciando
 exposições e manifestações de outros artistas por onde passava. Em
 Istambul, aprendeu novas técnicas como marmorização (Ebru),
-miniatura, guache e aquarela.
+miniatura, guache e aquarela. 
+							<br>
 Por muitos anos, dividiu seu tempo entre a pequena e calma Åmål, a
 criativa Gotemburgo e a eterna vibração de Londres, desenvolvendo na
 pintura seu próprio estilo artístico, expressando a natureza, suas cores,
