Updating "Meet the artist" text in EN

--- a/index.html
+++ b/index.html
@@ -61,7 +61,20 @@
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-						<p align="justify">Angela Stelin was born and raised in Brazil, spending her childhood between the bustling São Paulo and the tranquil farmlands of the Centre-West region, Mato Grosso do Sul. She grew up in a family immersed in music, literature, journalism and visual arts, and thus naturally developed an interest in drawing at a very young age. Driven by her enthusiasm for mathematics and geometric drawings, Angela pursued studies in Industrial Design from Fundação Armando Álvares Penteado (FAAP) in São Paulo, graduating in 1982.<br>Angela left Brazil with her husband and kids in 1994, living in Morocco, Turkey and then Sweden along the way. In these challenging and adventurous years, she continued to explore her passion for the arts by appreciating other artists' works and exhibitions. In Istanbul, Angela experimented with other techniques, such as marbling (Ebru), miniaturing, gouache and watercolours.  <br>Today, Angela spends her time between the creative hive of Gothenburg (Sweden) and the eternal vibrancy of London (UK), developing her own artistic style - expressing life, colours and nature.</p>
+						<p align="justify">Angela Stelin was born and raised in Brazil, spending her childhood between the bustling São Paulo and the quiet region of Mato Grosso do Sul. 
+							Living in a family involved with music, literature, journalism, and the arts, she began to draw very early.
+							Enthusiastic about mathematics and geometric drawing, she decided to study Industrial Design at the Armando Álvares Penteado Foundation (FAAP) in São Paulo, graduating in 1982. 
+							<br>
+							<br>
+							Angela, her husband and children left Brazil in 1994 to live in Morocco, Turkey, Sweden, England, Switzerland, and now Portugal. 
+							In these years of adventures and challenges, she maintained her passion for art by enjoying exhibitions and manifestations of other artists wherever she went. 
+							In Istanbul, she learned new techniques such as marbling (Ebru), miniature, gouache, and watercolor.  
+							<br>
+							<br>
+							For many years, she divided her time between the small and calm Åmål, the creative Gothenburg and the eternal vibrancy of London, developing in painting her own artistic style, expressing nature, its colors, feelings and realities. 
+							Now, living in Portugal and enjoying the sun and the beauties of the Algarve, with its colors and new elements, her stimulus is to express and transmit emotions, attraction and connection with the world.
+					
+						</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
