Updated gallery and added Dreams
- Changed gallery back to 2 photos in a row
- Added Dreams to the second row of the gallery 
- Updated the direction of "First Spring Moments" back to right

--- a/index.html
+++ b/index.html
@@ -101,11 +101,16 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 75% gallery">
 							<div class="row 20% images">
-								<div class="4u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrylic on canvas, 66 x 56 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrylic on canvas, 66 x 56 cm" alt="" /></a></div>
 
-								<div class="4u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-bottom"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
+							</div>
+							<br>
+							<div class="row 20% images">
+								<div class="6u 12u(mobile)"><a href="images/fulls/Algarve.jpeg" class="image fit from-left"><img src="images/thumbs/Thumb Algarve.png" title="Algarve, acrylic on canvas, 100 x 100cm" alt=""/></a></div>
 
-								<div class="4u 12u(mobile)"><a href="images/fulls/Algarve.jpeg" class="image fit from-right"><img src="images/thumbs/Thumb Algarve.png" title="Algarve, acrylic on canvas, 100 x 100cm" alt=""/></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/Dreams.jpeg" class="image fit from-right"><img src="images/thumbs/Thumb Dreams.png" title="Dreams, acrylic on canvas, 120 x 90cm" alt=""/></a></div>
+								
 							</div>
 							<br>
 							<div class="row 20% images">
