Replaced 3rd picture in first row with Genesis II

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 								<div class="4u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-top"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
 
-								<div class="4u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
+								<div class="4u 12u(mobile)"><a href="images/fulls/Genesis II.jpeg" class="image fit from-right"><img src="images/thumbs/Thumb Genesis II.png" title="Genesis II, acrylic on canvas, 120 x 80 cm" alt="" /></a></div>
 							</div>
 							<br>
 							<div class="row 20% images">
