Updating text in "Meet the Artist"

--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
 					<header>
 						<h2>MEET THE ARTIST</h2>
 					</header>
-						<p align="justify">Angela Stelin was born and raised in Brazil, spending her childhood between the bustling São Paulo and the quiet region of Mato Grosso do Sul. 
-							Living in a family involved with music, literature, journalism, and the arts, she began to draw very early.
-							Enthusiastic about mathematics and geometric drawing, she decided to study Industrial Design at the Armando Álvares Penteado Foundation (FAAP) in São Paulo, graduating in 1982. 
+						<p align="justify">Angela Stelin was born in Brazil, growing up between the vibrant energy of São Paulo and the untouched serenity of Mato Grosso do Sul. 
+							Raised in a household where music, literature, journalism, and the arts intertwined, she discovered an early fascination with drawing.
+							Captivated by shapes and proportions, she pursued Industrial Design, graduating from Fundação Armando Álvares Penteado (FAAP) in 1982. 
 							<br>
 							<br>
-							Angela, her husband and children left Brazil in 1994 to live in Morocco, Turkey, Sweden, England, Switzerland, and now Portugal. 
-							In these years of adventures and challenges, she maintained her passion for art by enjoying exhibitions and manifestations of other artists wherever she went. 
-							In Istanbul, she learned new techniques such as marbling (Ebru), miniature, gouache, and watercolor.  
+							In 1994, she embarked on a journey across the world with her family, collecting colors, cultures, and inspirations along the way. 
+							She lived amidst the exotic allure of Morocco, the mystique of Istanbul, the elegance of Switzerland, the vibrant pulse of London, and the Nordic charm of Sweden, until finding in the Algarve a sanctuary where light and landscape became her new palette.
+							Throughout her travels, she embraced various artistic influences and techniques, such as delicate marbling (Ebru), miniature painting, gouache, and watercolor, enriching her artistic expression.  
 							<br>
 							<br>
-							For many years, she divided her time between the small and calm Åmål, the creative Gothenburg and the eternal vibrancy of London, developing in painting her own artistic style, expressing nature, its colors, feelings and realities. 
-							Now, living in Portugal and enjoying the sun and the beauties of the Algarve, with its colors and new elements, her stimulus is to express and transmit emotions, attraction and connection with the world.
+							Between the quietude of Åmål, the creative effervescence of Gothenburg, and the boundless energy of London, Angela developed a unique style—one where nature translates into colors and emotions, blending the real with the deeply felt. 
+							Now, embraced by the golden light of Portugal, she continues to explore new ways of expressing the profound connection between art, emotion, and the world, creating works that transcend the canvas and speak to the soul.
 					
 						</p>
 				</div>
