Update "Meet the artist" text in portuguese

--- a/port/port.html
+++ b/port/port.html
@@ -61,24 +61,23 @@
 					<header>
 						<h2>A ARTISTA</h2>
 					</header>
-						<p align="justify">Angela Stelin nasceu e cresceu no Brasil, passando sua infância entre a agitada São Paulo e a região tranquila de Mato Grosso do Sul. Vivendo numa família envolvida com a música, literatura, jornalismo e artes, muito cedo começou a desenhar. Entusiasmada com matemática e desenho geométrico, decidiu cursar Desenho Industrial na Fundação Armando Álvares Penteado (FAAP) em São Paulo, formando-se em 1982.
+						<p align="justify">
+								Angela Stelin nasceu no Brasil, entre o fervilhante dinamismo de São Paulo e a serenidade quase intocada de Mato Grosso do Sul. 
+								Criada em um ambiente onde a música, a literatura, o jornalismo e as artes se entrelaçavam, descobriu cedo o fascínio pelo desenho. 
+								Movida pela paixão pelas formas e proporções, seguiu o caminho do Desenho Industrial, graduando-se pela Fundação Armando Álvares Penteado (FAAP) em 1982.
 							<br>
 							<br>
-								Angela, marido e filhos deixaram o Brasil em 1994 para morar em
-								Marrocos, Turquia, Suécia, Inglaterra, Suíça e agora Portugal. Nesses
-								anos de aventuras e desafios, manteve sua paixão pela arte apreciando
-								exposições e manifestações de outros artistas por onde passava. Em
-								Istambul, aprendeu novas técnicas como marmorização (Ebru),
-								miniatura, guache e aquarela. 
+								Em 1994, embarcou com sua família em uma jornada pelo mundo, colecionando cores, culturas e inspirações. 
+								Viveu no exotismo de Marrocos, no mistério de Istambul, na elegância da Suíça, na vibrante Londres e no encanto nórdico da Suécia, até encontrar no Algarve um refúgio onde luz e paisagem se tornam sua nova paleta. Em
+								Pelo caminho, absorveu influências e técnicas, como a delicada marmorização (Ebru), miniatura, guache e aquarela, enriquecendo sua expressão artística.
 							<br>
 							<br>
-								Por muitos anos, dividiu seu tempo entre a pequena e calma Åmål, a
-								criativa Gotemburgo e a eterna vibração de Londres, desenvolvendo na
-								pintura seu próprio estilo artístico, expressando a natureza, suas cores,
-								sentimentos e realidades. Agora, vivendo em Portugal e desfrutando do
-								sol e das belezas do Algarve, com suas cores e novos elementos, seu
-								estímulo é expressar e transmitir emoções, atração e conexão com o
-								mundo.</p>
+								Entre a quietude da pequena Åmål, a efervescência criativa de Gotemburgo e a pulsação infinita de Londres, Angela desenvolveu um estilo próprio, onde a natureza se traduz em 
+								cores e emoções, misturando o real e o sensível. 
+								Agora, envolvida pelo sol dourado de Portugal, encontra novas formas de expressar a conexão profunda entre arte, sentimento e 
+								mundo, criando obras que transcendem a tela e tocam a alma.
+								
+						</p>
 				</div>
 				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
