Update port.html meet the artist text

--- a/port/port.html
+++ b/port/port.html
@@ -64,7 +64,7 @@
 						<p align="justify">
 								Angela Stelin nasceu no Brasil, entre o fervilhante dinamismo de São Paulo e a serenidade quase intocada de Mato Grosso do Sul. 
 								Criada em um ambiente onde a música, a literatura, o jornalismo e as artes se entrelaçavam, descobriu cedo o fascínio pelo desenho. 
-								Movida pela paixão pelas formas e proporções, seguiu o caminho do Desenho Industrial, graduando-se pela Fundação Armando Álvares Penteado (FAAP) em 1982.
+								Movida pela paixão pelas formas e proporções, seguiu o caminho do Desenho Industrial, graduando-se pela Fundação Armando Álvares Penteado (FAAP) em 1982
 							<br>
 							<br>
 								Em 1994, embarcou com sua família em uma jornada pelo mundo, colecionando cores, culturas e inspirações. 
