--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro"><b>WELCOME</b></a></li>
-							<li><a href="#artist"><b>MEET THE ARTIST</b></a></li>
-							<li><a href="#one"><b>STYLE</b></a></li>
-							<li><a href="#work"><b>GALLERY</b></a></li>
-							<li><a href="#contact"><b>CONTACT</b></a></li>
-							<li><a href="port/port.html"><b>PT</b></a></li>
+							<li><a href="#intro">WELCOME</a></li>
+							<li><a href="#artist">MEET THE ARTIST</a></li>
+							<li><a href="#one">STYLE</a></li>
+							<li><a href="#work">GALLERY</a></li>
+							<li><a href="#contact">CONTACT</a></li>
+							<li><a href="port/port.html">PT</a></li>
 						</ul>
 					</nav>
 
