--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro">WELCOME</a></li>
+							<li><a href="#intro">WELCOMEE</a></li>
 							<li><a href="#artist">MEET THE ARTIST</a></li>
 							<li><a href="#one">STYLE</a></li>
 							<li><a href="#work">GALLERY</a></li>
