--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
 					<script src="https://www.emailmeform.com/builder/forms/jsform/v94N799i3Rx66bfJu0" type="text/javascript"></script>
 						<div style="margin-top:18px;text-align:center">
 							<div id='emf_advertisement'>
-								<font face="'Playfair Display', serif" size="2" color="#000000">Powered by</font>
+								<font face="Playfair Display, serif" size="2" color="#000000">Powered by</font>
 								<span style="position: relative; padding-left: 3px; bottom: -5px;">
 									<img src="//assets.emailmeform.com/images/footer-logo.png?RU1GLTAyLTI3" />
 								</span>
-								<font face="'Playfair Display', serif" size="2" color="#000000">EMF </font>
+								<font face="Playfair Display, serif" size="2" color="#000000">EMF </font>
 								<a style="text-decoration:none;" href="http://www.emailmeform.com/" target="_blank">
-									<font face="'Playfair Display', serif" size="2" color="#000000">Web Form</font>
+									<font face="Playfair Display, serif" size="2" color="#000000">Web Form</font>
 								</a>
 							</div>
 						</div>
