--- a/index.html
+++ b/index.html
@@ -101,11 +101,9 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 90% gallery">
 							<div class="row 20% images">
-								<div class="4u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrylic on canvas, 66 x 56 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrylic on canvas, 66 x 56 cm" alt="" /></a></div>
 
-								<div class="4u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-top"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
-
-								<div class="4u 12u(mobile)"><a href="images/fulls/Genesis II.jpeg" class="image fit from-right"><img src="images/thumbs/Thumb Genesis II.png" title="Genesis II, acrylic on canvas, 120 x 80 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
 							</div>
 							<br>
 							<div class="row 20% images">
