Update index.html - Angela's photo content box
- Updating the content box to have an even frame around the picture

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<p><center><img src="images/Angela 2025.JPEG" width="350px" height="450 px"></center></p>
+				<div class="content box style2" style="max-width: 380px; margin: auto;">
+					<p style="margin: 0;">
+					<img src="images/Angela 2025.JPEG" width="350px" height="450 px">
+					</p>
 				</div>
 				<a href="#artist2" class="button style2 down anchored">More</a>
 			</section>
