--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen">
-				<div class="content box style2" style="max-width: 380px; margin: auto;">
+				<div class="content box style2" style="padding: 15px;">
 					<p style="margin: 0;">
 					<img src="images/Angela 2025.JPEG" width="350px" height="450 px">
 					</p>
