--- a/index.html
+++ b/index.html
@@ -50,12 +50,8 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
-				<div class="content box style2" style="max-width:450px"> 
-					<p>
-						<center>
-							<img src="images/Angela 2025.JPEG" width="350px" height="450 px">
-						</center>
-					</p> 
+    				<div class="content box style2" style="width: 380px; padding: 15px;"> 
+        				<img src="images/Angela 2025.JPEG" width="350px" height="450px" style="display: block; margin: 0 auto;">
 				</div>
 				<a href="#artist2" class="button style2 down anchored">More</a>
 			</section>
