--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
-    				<div class="content box style2" style="width: 380px; padding: 15px; float: right; margin-right: 15%;"> 
-        				<img src="images/Angela 2025.JPEG" width="350px" height="450px" style="display: block; margin: 0 auto;">
-   				</div> 
+    					<div class="content box style2" style="width: 400px; padding: 20px; text-align: right;"> 
+        					
+							<img src="images/Angela 2025.JPEG" width="350px" height="450px" style="display: block; margin: 0 auto;">
+						
+    					</div> 
 				<a href="#artist2" class="button style2 down anchored">More</a>
 			</section>
 
