--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
-    					<div class="content box style2" style="width: 390px; padding: 20px;"> 
+    					<div class="content box style2" style="width: 390px; padding: 20px; margin-left: auto; margin-right: 5%;"> 
         					
 							<img src="images/Angela 2025.JPEG" width="350px" height="450px" style="display: block; margin: 0;">
 						
