--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
-    					<div class="content box style2" style="width: 390px; padding: 20px; margin-left: auto; margin-right: 5%;"> 
-        					
-							<img src="images/Angela 2025.JPEG" width="350px" height="450px" style="display: block; margin: 0;">
+    <div class="content box style2" style="width: 390px; padding: 20px; line-height: 0; position: absolute; right: 5%; top: 50%; transform: translateY(-50%);"> 
+        <img src="images/Angela 2025.JPEG" width="350px" height="460px" style="display: block; margin: 0;">
+    </div>  
 						
     					</div> 
 				<a href="#artist2" class="button style2 down anchored">More</a>
