--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
-    <div class="content box style2" style="width: 390px; padding: 20px; line-height: 0; position: absolute; right: 5%; top: 50%; transform: translateY(-50%);"> 
-        <img src="images/Angela 2025.JPEG" width="350px" height="460px" style="display: block; margin: 0;">
-    </div>  
-						
+    					<div class="content box style2" style="width: 390px; padding: 20px; line-height: 0; left: 65% !important;"> 
+       						 <img src="images/Angela 2025.JPEG" width="350px" height="460px" style="display: block; margin: 0;">
     					</div> 
 				<a href="#artist2" class="button style2 down anchored">More</a>
 			</section>
