Adding years to the uploaded paintings

--- a/index.html
+++ b/index.html
@@ -101,28 +101,28 @@
 					<!-- Lightbox Gallery  -->
 						<div class="container 90% gallery">
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrylic on canvas, 66 x 56 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="Ágata, acrylic on canvas - 2009, 66 x 56 cm" alt="" /></a></div>
 
-								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas, 100 x 80 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas - 2013, 100 x 80 cm" alt="" /></a></div>
 							</div>
 							<br>
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/Algarve.jpeg" class="image fit from-left"><img src="images/thumbs/Thumb Algarve.png" title="Algarve, acrylic on canvas, 100 x 100cm" alt=""/></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/Algarve.jpeg" class="image fit from-left"><img src="images/thumbs/Thumb Algarve.png" title="Algarve, acrylic on canvas - 2022, 100 x 100cm" alt=""/></a></div>
 
-								<div class="6u 12u(mobile)"><a href="images/fulls/Dreams.jpeg" class="image fit from-right"><img src="images/thumbs/Thumb Dreams.png" title="Dreams, acrylic on canvas, 120 x 90cm" alt=""/></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/Dreams.jpeg" class="image fit from-right"><img src="images/thumbs/Thumb Dreams.png" title="Dreams, acrylic on canvas - 2016, 120 x 90cm" alt=""/></a></div>
 								
 							</div>
 							<br>
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Blue Lagoon, acrylic on canvas, 100 x 70 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/03.jpg" class="image fit from-left"><img src="images/thumbs/03.jpg" title="Blue Lagoon, acrylic on canvas - 2014, 100 x 70 cm" alt="" /></a></div>
 
-								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Diving in a Virtual Night, acrylic on canvas, 120 x 90 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/04.jpg" class="image fit from-right"><img src="images/thumbs/04.jpg" title="Diving in a Virtual Night, acrylic on canvas - 2015, 120 x 90 cm" alt="" /></a></div>
 							</div>
 							<br>
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="Caminhos, acrylic on canvas, 90 x 120 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/05.jpg" class="image fit from-left"><img src="images/thumbs/05.jpg" title="Caminhos, acrylic on canvas - 2014, 90 x 120 cm" alt="" /></a></div>
 
-								<div class="6u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Little Miracles, acrylic on canvas ,100x130 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/06.jpg" class="image fit from-right"><img src="images/thumbs/06.jpg" title="Little Miracles, acrylic on canvas - 2014 ,100x130 cm" alt="" /></a></div>
 							</div>
 						</div>
 
