--- a/port/port.html
+++ b/port/port.html
@@ -102,23 +102,23 @@
 					</header>
 
 					<!-- Lightbox Gallery  -->
-						<div class="container 75% gallery">
+						<div class="container 90% gallery">
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/01.jpg" class="image fit from-left"><img src="../../images/thumbs/01.jpg" title="Ágata, acrílica s/ tela, 66 x 56 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/01.jpg" class="image fit from-left"><img src="../../images/thumbs/01.jpg" title="Ágata, acrílica s/ tela - 2009, 66 x 56 cm" alt="" /></a></div>
 
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/02.jpg" class="image fit from-right"><img src="../../images/thumbs/02.jpg" title="First Spring Moments, acrílica s/ tela, 100 x 80 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/02.jpg" class="image fit from-right"><img src="../../images/thumbs/02.jpg" title="First Spring Moments, acrílica s/ tela - 2013, 100 x 80 cm" alt="" /></a></div>
 							</div>
 							<br>
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/03.jpg" class="image fit from-left"><img src="../../images/thumbs/03.jpg" title="Blue Lagoon, acrílica s/ tela, 100 x 70 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/03.jpg" class="image fit from-left"><img src="../../images/thumbs/03.jpg" title="Blue Lagoon, acrílica s/ tela - 2014, 100 x 70 cm" alt="" /></a></div>
 
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/04.jpg" class="image fit from-right"><img src="../../images/thumbs/04.jpg" title="Diving in a Virtual Night, acrílica s/ tela, 120 x 90cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/04.jpg" class="image fit from-right"><img src="../../images/thumbs/04.jpg" title="Diving in a Virtual Night, acrílica s/ tela - 2015, 120 x 90cm" alt="" /></a></div>
 							</div>
 							<br>
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/05.jpg" class="image fit from-left"><img src="../../images/thumbs/05.jpg" title="Caminhos,acrílica s/ tela, 90 x 120 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/05.jpg" class="image fit from-left"><img src="../../images/thumbs/05.jpg" title="Caminhos,acrílica s/ tela - 2014, 90 x 120 cm" alt="" /></a></div>
 
-								<div class="6u 12u(mobile)"><a href="../../images/fulls/06.jpg" class="image fit from-right"><img src="../../images/thumbs/06.jpg" title="Pequenos Milagres,acrílica s/ tela, 100 x 130 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="../../images/fulls/06.jpg" class="image fit from-right"><img src="../../images/thumbs/06.jpg" title="Pequenos Milagres,acrílica s/ tela -2014, 100 x 130 cm" alt="" /></a></div>
 							</div>
 						</div>
 
