Corrected the source for Heliconias full

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<br>
 							
 							<div class="row 20% images">
-								<div class="6u 12u(mobile)"><a href="images/fulls/HeliconiasJPG" class="image fit from-left"><img src="images/thumbs/Thumb Heliconias.png" title="Heliconias, acrylic on canvas - 2009, 90 x 60 cm" alt="" /></a></div>
+								<div class="6u 12u(mobile)"><a href="images/fulls/Heliconias.JPG" class="image fit from-left"><img src="images/thumbs/Thumb Heliconias.png" title="Heliconias, acrylic on canvas - 2009, 90 x 60 cm" alt="" /></a></div>
 
 								<div class="6u 12u(mobile)"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="First Spring Moments, acrylic on canvas - 2013, 100 x 80 cm" alt="" /></a></div>
 							</div>
