--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
-    				<div class="content box style2" style="width: 390px; padding: 20px; background-color: #F5E6BE;"> 
+    				<div class="content box style2" style="width: 390px; padding: 20px; background-color: #F2E4BA;"> 
        		 			<img src="images/Angela 2025.JPEG" width="350px" height="460px" style="display: block; margin: 0;">
     				</div> 
 				<a href="#artist2" class="button style2 down anchored">More</a>
