--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-				<div class="content box style2">
+				<div class="content" style="color: #FFFFFF;">
 					<header>
 						<h2></h2>
 					</header>
-					<p align="justify">My passion is to depict on canvas my way of seeing and expressing my surroundings.</p>
-					<p align="right"><img src="images/Signature.png"></p>
+					<p align="justify">My passion is to depict on canvas my way of seeing and expressing my surroundings - Angela Stelin</p>
 				</div>
 				<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
