Moving the white text to higher up the page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-				<div class="content" style="color: #FFFFFF;">
+				<div class="content" style="color: #FFFFFF; width: 100%; text-align: center; padding-top: 15%; font-size: 1.5em; letter-spacing: 0.1em;">
 					<header>
 						<h2></h2>
 					</header>
