Making the white text show up on the background

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-				<div class="content" style="color: #FFFFFF; width: 100%; text-align: center; padding-top: 15%; font-size: 1.5em; letter-spacing: 0.1em;">
-					<header>
-						<h2></h2>
-					</header>
-					<p align="justify">My passion is to depict on canvas my way of seeing and expressing my surroundings - Angela Stelin</p>
-				</div>
-				<a href="#artist" class="button style2 down anchored">More</a>
-			</section>
+    			<div style="position: absolute; top: 30%; left: 0; right: 0; text-align: center; color: #FFFFFF; padding: 20px;">
+        			<header>
+           		 		<h2></h2>
+       				 </header>
+        			<p style="font-size: 24px; letter-spacing: 0.1em; line-height: 1.5;">My passion is to depict on canvas my way of seeing and expressing my surroundings - Angela Stelin</p>
+    			</div>
+    			<a href="#artist" class="button style2 down anchored">More</a>
+</section>
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
