Trying text shadow on the first section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div style="position: absolute; top: 30%; left: 0; right: 0; text-align: center; color: #FFFFFF; padding: 20px;">
-        				<p style="font-size: 24px; letter-spacing: 0.1em; line-height: 1.5; background-color: rgba(0,0,0,0.4); display: inline-block; padding: 15px 30px; border-radius: 5px;">My passion is to depict on canvas my way of seeing and expressing my surroundings - Angela Stelin</p>
-    				</div>
+   			 <div style="position: absolute; top: 30%; left: 0; right: 0; text-align: center; color: #FFFFFF; padding: 20px;">
+        			<p style="font-size: 24px; letter-spacing: 0.1em; line-height: 1.5; text-shadow: 2px 2px 4px rgba(0,0,0,0.7);">My passion is to depict on canvas my way of seeing and expressing my surroundings - Angela Stelin</p>
+   			 </div>
     				<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
 
