Trying to move the photo again to the right

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 <!-- Meet the artist -->
 			<section id="artist" class="main style2 right dark fullscreen"> 
-    				<div class="content box style2" style="width: 390px; padding: 20px; background-color: #F2E4BA; margin-right: 100px;"> 
+    				<div class="content box style2" style="width: 390px; padding: 20px; background-color: #F2E4BA; right: -20px; position: relative;"> 
         				<img src="images/Angela 2025.JPEG" width="350px" height="460px" style="display: block; margin: 0;">
     				</div> 
-    				<a href="#artist2" class="button style2 down anchored">More</a>
+   				 <a href="#artist2" class="button style2 down anchored">More</a>
 			</section>
 
 			<section id="artist2" class="main style3 primary">
