--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 
 		<!-- Intro -->
 			<section id="intro" class="main style2 right dark fullscreen">
-    				<div style="position: absolute; top: 30%; left: 0; right: 0; text-align: center; color: #FFFFFF; padding: 20px;">
-        				<p style="font-size: 24px; letter-spacing: 0.1em; line-height: 1.5; font-weight: 600; text-shadow: 2px 2px 4px rgba(0,0,0,0.7), -1px -1px 1px rgba(0,0,0,0.5);">My passion is to depict on canvas my way of seeing and expressing my surroundings - Angela Stelin</p>
+				<div class="content box style2">
+					<header>
+						<h2></h2>
+					</header>
+					<p align="justify">My passion is to depict on canvas my way of seeing and expressing my surroundings.</p>
+					<p align="right"><img src="images/Signature.png"></p>
     				</div>
    					<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
