Updating welcome section
Making the welcome section have less white space and the signature is in line with the text

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 					<header>
 						<h2></h2>
 					</header>
-					<p align="justify">My passion is to depict on canvas my way of seeing and expressing my surroundings.</p>
-					<p align="right"><img src="images/Signature.png"></p>
+					<div style="display: flex; align-items: center; justify-content: space-between;">
+            					<p style="margin: 0; flex: 1;">My passion is to depict on canvas my way of seeing and expressing my surroundings.</p>
+            					<img src="images/Signature.png" style="margin-left: 20px; height: auto; max-width: 30%;">
+        				</div>
     				</div>
    					<a href="#artist" class="button style2 down anchored">More</a>
 			</section>
